--- a/Selvalakshmi_task/task2.html
+++ b/Selvalakshmi_task/task2.html
@@ -5,57 +5,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login</title>
     <style>
-        .content {
-            margin: 5% 10%;
-            background-color: rgb(247, 245, 235);
-            padding: 32px;
-            border-radius: 12px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(to right, #ff7f50, #ffcccb);
+            height: 100vh;
+            display: flex;
+            justify-content: center;
             align-items: center;
-            text-align: center;
         }
-        .containerhead{
-            position: relative;
-            width: 90%;
-            margin: 20px auto;
-            text-align: right;
-            background-color: palegoldenrod; 
-            padding: 20px;
-            border-radius: 10px; 
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
-            overflow: hidden;
-        }
-        .btn {
-            background-color: #04AA6D; 
-            border: none;
-            color: white;
-            padding: 8px 8px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 2px 2px;
-            transition-duration: 0.4s;
-            cursor: pointer;
-            border-radius: 8px;}
-            .btncol {
-            background-color: white; 
-            color: black; 
-            border: 2px solid cyan;
-            }
 
-            .btn:hover {
-            background-color: cyan;
-            color: rgb(17, 16, 16);
-            box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-            }
+        .login-container {
+            background-color: #fff;
+            padding: 40px;
+            border-radius: 10px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+            width: 350px;
+            text-align: center;
+        }
+
+        .login-container h2 {
+            margin-bottom: 30px;
+            color: #ff7f50;
+        }
+
+        .login-container input {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 1em;
+        }
+
+        .login-container input[type="submit"] {
+            background-color: #ff7f50;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .login-container input[type="submit"]:hover {
+            background-color: #ff6347;
+        }
+
+        .login-container a {
+            display: block;
+            margin-top: 15px;
+            text-decoration: none;
+            color: #ff7f50;
+            transition: color 0.3s;
+        }
+
+        .login-container a:hover {
+            color: #ff4500;
+        }
     </style>
 </head>
 <body>
     
     <div class="content">
-        <h1 style="color: rgb(29, 44, 244);">Account Login </h1>
-        <h3> Mail ID</h3>
+        <h1 style="color: rgb(29, 44, 244);">LOGIN TO YOUR ACCOUNT </h1>
+        <h3> MAIL ID</h3>
         <input type="email" id="t1" placeholder="Your mail id" style="width: 350px;
     height: 30px;"/></br></br>
         <h3> PASSWORD</h3>
