--- a/Selvalakshmi_task/contact.html
+++ b/Selvalakshmi_task/contact.html
@@ -4,19 +4,69 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact Us - Rental Cars</title>
-  <link rel="stylesheet" href="styles.css">
+  <style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f4f4f4;
+    }
+    nav {
+        background-color: #007bff;
+        padding: 15px;
+        text-align: center;
+    }
+    nav a {
+        color: white;
+        margin: 0 15px;
+        text-decoration: none;
+        font-weight: bold;
+    }
+    .contact-form {
+        margin: 50px auto;
+        width: 50%;
+        background-color: white;
+        padding: 20px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+    .contact-form h2 {
+        text-align: center;
+    }
+    .contact-form input, .contact-form textarea {
+        width: 100%;
+        padding: 10px;
+        margin: 10px 0;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+    }
+    .contact-form button {
+        background-color: #ff5722;
+        color: white;
+        padding: 10px 20px;
+        border: none;
+        cursor: pointer;
+        display: block;
+        width: 100%;
+        margin: 20px 0;
+        font-size: 1.2em;
+    }
+    footer {
+        background-color: #007bff;
+        color: white;
+        text-align: center;
+        padding: 15px;
+    }
+</style>
 </head>
 <body>
   <header>
     <h1>Contact Us</h1>
     <nav>
-      <ul>
-        <li><a href="home.html">Home</a></li>
-        <li><a class= "active" href="contact.html">Contact</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="login.html">Login</a></li>
-        <li><a href="register.html">Register</a></li>
-      </ul>
+        <a href="home.html">Home</a>
+        <a class= "active" href="contact.html">Contact</a>
+        <a href="gallery.html">Gallery</a>
+        <a href="login.html">Login</a>
+        <a href="register.html">Register</a>
     </nav>
   </header>
   <main>
