--- a/Selvalakshmi_task/gallery.html
+++ b/Selvalakshmi_task/gallery.html
@@ -4,19 +4,57 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gallery - Rental Cars</title>
-  <link rel="stylesheet" href="styles.css">
+  <style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f4f4f4;
+    }
+    nav {
+        background-color: #007bff;
+        padding: 15px;
+        text-align: center;
+    }
+    nav a {
+        color: white;
+        margin: 0 15px;
+        text-decoration: none;
+        font-weight: bold;
+    }
+    .gallery {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        gap: 15px;
+        padding: 20px;
+    }
+    .gallery img {
+        width: 100%;
+        border-radius: 8px;
+        transition: transform 0.3s, box-shadow 0.3s;
+    }
+    .gallery img:hover {
+        transform: scale(1.05);
+        box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+    }
+    footer {
+        background-color: #007bff;
+        color: white;
+        text-align: center;
+        padding: 15px;
+        margin-top: 50px;
+    }
+</style>
 </head>
 <body>
   <header>
     <h1>Our Fleet Gallery</h1>
     <nav>
-      <ul>
-        <li><a href="home.html">Home</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a class="active" href="gallery.html">Gallery</a></li>
-        <li><a href="login.html">Login</a></li>
-        <li><a href="register.html">Register</a></li>
-      </ul>
+        <a href="home.html">Home</a>
+        <a href="contact.html">Contact</a>
+        <a class="active" href="gallery.html">Gallery</a>
+        <a href="login.html">Login</a>
+        <a href="register.html">Register</a>
     </nav>
   </header>
   <main>
