--- a/Selvalakshmi_task/home.html
+++ b/Selvalakshmi_task/home.html
@@ -5,18 +5,57 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home - Rental Cars</title>
   <link rel="stylesheet" href="styles.css">
+  <style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f4f4f4;
+    }
+    nav {
+        background-color: #007bff;
+        padding: 15px;
+        text-align: center;
+    }
+    nav a {
+        color: white;
+        margin: 0 15px;
+        text-decoration: none;
+        font-weight: bold;
+    }
+    .hero {
+        background-color: #ff5722;
+        color: white;
+        text-align: center;
+        padding: 50px 0;
+    }
+    .hero h1 {
+        font-size: 3em;
+        margin: 0;
+    }
+    .hero p {
+        font-size: 1.5em;
+    }
+    footer {
+        background-color: #007bff;
+        color: white;
+        text-align: center;
+        padding: 15px;
+        margin-top: 50px;
+    }
+</style>
 </head>
 <body>
   <header>
     <h1>Welcome to Rental Cars</h1>
     <nav>
-      <ul>
-        <li><a class = "active" href="home.html">Home</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="login.html">Login</a></li>
-        <li><a href="register.html">Register</a></li>
-      </ul>
+      
+        <a class = "active" href="home.html">Home</a>
+        <a href="contact.html">Contact</a>
+        <a href="gallery.html">Gallery</a>
+        <a href="login.html">Login</a>
+        <a href="register.html">Register</a>
+      
     </nav>
   </header>
   <main>
